<?xml version="1.0" encoding="utf-8"?>
<!--
 ! Excerpted from "Hello, Android! 2e",
 ! published by The Pragmatic Bookshelf.
 ! Copyrights apply to this code. It may not be used to create training material, 
 ! courses, books, articles, and the like. Contact us if you are in doubt.
 ! We make no guarantees that this code is fit for any purpose. 
 ! Visit http://www.pragmaticprogrammer.com/titles/eband3 for more book information.
-->
<resources>
    <string name="app_name">MyMap</string>
    <string name="show_latitude_longitude_label">Current Lat / Long</string>
<string name="satellite_label">Satellite</string>
<string name="street_view_label">Street View</string>
<string name="traffic_label">Traffic</string>
<string name="settings_label">Settings...</string>
<string name="view_preferences">View Preferences</string>
<string name="title_street_view_preference">Street View</string>
<string name="summary_street_view_preference">View map in Street View mode</string>
<string name="title_satellite_preference">Satellite</string>
<string name="summary_satellite_preference">View map in Satellite mode</string>
<string name="title_traffic_preference">Traffic</string>
<string name="summary_traffic_preference">View map in Traffic mode</string>
</resources>
